CGLibStackOverflowError 测试